# config-loader

./: CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml
config_loader/: __init__.py  loader.py
examples/: config.dev.yaml  config.yaml  usage.py
src/config_loader/: loader.py
tests/: test_loader.py
