[project]
name = "config-loader"
version = "0.1.2"
description = "A lightweight Python config loader inspired by Spring Framework"
readme = "README.md"
authors = [
    { name = "cncws", email = "1031616423@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[[tool.uv.index]]
name = "em"
url = "http://py.packages.yunwei/simple/"
publish-url = "http://230205:zSBQ5bEQf5hi@py.packages.yunwei/"
explicit = true
